--- a/ក្រដាស់វិញ្ញាសារគំរូ/examsheet.tex
+++ b/ក្រដាស់វិញ្ញាសារគំរូ/examsheet.tex
@@ -6,12 +6,12 @@
 \def\school#1{\def\@school{#1}}
 \def\subject#1{\def\@subject{#1}}
 \def\teacher#1{\def\@teacher{#1}}
-\def\label@school{វិទ្យាល័យ}
+\def\label@school{ប្រឡង}
 \def\label@subject{មុខវិជ្ជា}
-\def\label@teacher{គ្រូបង្រៀន}
+\def\label@teacher{រៀបរៀងដោយ}
 \def\label@point{ពិន្ទុ}
-\school{ឈ្មោះវិទ្យាល័យ}
-\teacher{ឈ្មោះគ្រូ}
+\school{តេស្តសមត្ថភាព}
+\teacher{ស៊ុំ សំអុន}
 \subject{គណិតវិទ្យា}
 \usepackage{geometry}
 \geometry{top=.8in,bottom=.8in,left=.4in,right=.4in}
@@ -46,17 +46,15 @@
 \makeatother
 \begin{document}
 	\begin{problem}
-		\pro[១៥] ចុចៗ
+		\pro[២៤] គេមានចំនួនកុំផ្លិច $ z_{1}=-3+3\sqrt{3}i $ និង $ z_{2}=2-2\sqrt{3}i $ ។​
 		\begin{problem}
-			\pro ចុចៗ
-			\pro ចុចៗ
-			\pro ចុចៗ
+			\pro សរសេរ $ z_{1} $ និង $ z_{2} $​ ជាទម្រង់ត្រីកោណមាត្រ ។
+			\pro គណនា $ z_{1} +z_{2} $ និង $ z_{1}-z_{2} $ ។
+			\pro គណនា $ z_{1}\times z_{2} $ និង $ \dfrac{z_{1}}{z_{2}} $ ។
+		    \pro សរសេរ​ $ z_{1}\times z_{2} $ និង $ \dfrac{z_{1}}{z_{2}} $ ជាទម្រង់ត្រីកោណមាត្រ ។
 		\end{problem}
-		\pro[២៥] ចុចៗ
-		\begin{problem}
-			\pro ចុចៗ
-			\pro ចុចៗ
-			\pro ចុចៗ
-		\end{problem}
+		\pro[២០] គេមានចំនួនកុំផ្លិច $ z_{1}=2-1+\sqrt{3}i $ និង $ z_{2}=1+\cos\dfrac{\pi}{4}-i\sin\dfrac{\pi}{4} $
+		\par ចូរសរសេរ $ z_{1} $ និង $ z_{2} $ ជាទម្រង់ត្រីកោណមាត្រ។
+		\pro[៣៦] គណនាលីមីតនៃអនុគមន៍ខាងក្រោម៖
 	\end{problem}
 \end{document}
