--- a/Beamer 2/main.tex
+++ b/Beamer 2/main.tex
@@ -3,6 +3,11 @@
 \usetheme{Madrid}%You can choose any theme you like the most
 \usepackage{polyglossia}%You can translate from English to any language
 \usepackage{multicol}
+\usepackage{amsmath}
+\usepackage{mathtools}
+\usepackage{amsfonts}
+\usepackage{amssymb}
+\usepackage{icomma}
 \newfontfamily\khmerfont[Script=Khmer]{Khmer OS Content}
 \newfontfamily\englishfont{Latin Modern Roman}
 \setdefaultlanguage[numerals=khmer]{khmer}
